--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -61,7 +61,7 @@
 
 @layer base {
   * {
-    @apply border-border;
+    /* @apply border-border; */
   }
   body {
     @apply bg-background text-foreground;
@@ -182,6 +182,10 @@
   @apply md:px-8 lg:px-16 xl:px-24 2xl:px-32 px-4;
 }
 
+.title-size {
+  @apply md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-8xl text-4xl;
+}
+
 .h1-size {
   @apply md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-6xl text-2xl;
 }
@@ -204,4 +208,70 @@
 
 .width-frame {
   @apply w-[130px] md:w-[170px] lg:w-[220px] xl:w-[240px] 2xl:w-[280px];
+}
+
+/* bundle styles */
+.bundle form,
+.bundle form button {
+  @apply w-full;
+}
+
+/* page styles */
+
+.native {
+  @apply padding-main flex flex-col items-center w-full py-4;
+}
+
+.native h1:not(.article h1) {
+  @apply h1-size font-silk text-brown;
+}
+
+.native h4:not(.article h4) {
+  @apply p-size font-silk text-brown border-sand pt-2 border-t;
+}
+
+.native .child {
+  @apply w-full;
+}
+
+.native a:not(.article a) {
+  @apply text-brown font-silk;
+}
+
+.native .article {
+  @apply text-start text-dark w-full;
+}
+
+/* search styles */
+
+.predictive-search-result {
+  @apply py-2;
+}
+
+.predictive-search-result ul {
+  @apply flex flex-col;
+}
+
+.predictive-search-result img {
+  @apply mb-2;
+}
+
+.predictive-search-result h5 {
+  @apply font-silk text-brown text-xl uppercase;
+}
+
+.predictive-search-result-item a {
+  @apply flex flex-row gap-2 cursor-pointer;
+}
+
+.predictive-search-result-item p {
+  @apply font-silk text-brown text-base;
+}
+
+.predictive-search-result-item small div {
+  @apply text-sm font-light;
+}
+
+.predictive-search-result-item a div span {
+  @apply text-base font-light;
 }
