--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -182,6 +182,10 @@
   @apply md:px-8 lg:px-16 xl:px-24 2xl:px-32 px-4;
 }
 
+.padding-main-large {
+  @apply md:px-16 lg:px-24 xl:px-32 2xl:px-40 px-8;
+}
+
 .title-size {
   @apply md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-8xl text-4xl;
 }
