--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -186,6 +186,9 @@
   @apply md:px-16 lg:px-24 xl:px-32 2xl:px-40 px-8;
 }
 
+.big-size {
+  @apply md:text-6xl lg:text-7xl xl:text-8xl 2xl:text-9xl text-4xl;
+}
 .title-size {
   @apply md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-8xl text-4xl;
 }
