--- a/app/styles/tailwind.css
+++ b/app/styles/tailwind.css
@@ -83,6 +83,10 @@
   @apply md:text-5xl lg:text-6xl xl:text-7xl 2xl:text-8xl text-4xl;
 }
 
+.sub-size {
+  @apply md:text-5xl lg:text-[44px] xl:text-[52px] 2xl:text-[60px] text-[32px];
+}
+
 .hero-size {
   @apply md:text-3xl lg:text-4xl xl:text-5xl 2xl:text-6xl text-3xl;
 }
